Fixing click issue on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,8 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
+  cursor:pointer;
+
 }
 
 
